# WB_L3_2_task_manager

task_manager/task_creator/: Cargo.toml
task_manager/task_creator/src/: main.rs
task_manager/task_creator/src/handlers/: mod.rs
task_manager/task_creator/src/models/: mod.rs
task_manager/task_logger/: Cargo.toml
task_manager/task_logger/src/: main.rs
task_manager/task_logger/src/logger/: mod.rs
task_manager/task_processor/: Cargo.toml
task_manager/task_processor/src/: main.rs
task_manager/task_processor/src/models/: mod.rs
task_manager/task_processor/src/processor/: mod.rs
task_manager/task_processor/src/watcher/: mod.rs
