[package]
name = "task_creator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.7"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
chrono = "0.4.38"
uuid = { version = "1.11.0", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"