[package]
name = "task_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
inotify = "0.11.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
